<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CrearMascotaActivity">

    <LinearLayout
        android:id="@+id/lyt_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_25dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_150dp"
            app:cardCornerRadius="@dimen/dimen_70dp">

            <ImageView
                android:id="@+id/foto_mascota"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:drawable/sym_def_app_icon" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_subir_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                android:drawableLeft="@drawable/ic_edit"
                android:text="@string/subir_foto"/>
            <Space
                android:layout_width="@dimen/dimen_16dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_eliminar_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_700"
                android:drawableLeft="@drawable/ic_delete"
                android:text="@string/eliminar_foto"/>

        </LinearLayout>
    </LinearLayout>

    <!--Formulario de mascota-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp">
        <EditText
            android:id="@+id/et_nombre_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp">
        <EditText
            android:id="@+id/et_edad_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edad"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp">
        <EditText
            android:id="@+id/et_color_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp">
        <EditText
            android:id="@+id/et_precio_vacuna_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio_vacuna"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/btn_guardar_mascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guardar"/>
</LinearLayout>