<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"

        app:cardCornerRadius="@dimen/dimen_16dp"
        app:cardElevation="@dimen/dimen_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inciar_session"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_34sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp">
                <EditText
                    android:id="@+id/et_correo_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                app:endIconMode="password_toggle">
                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_25dp"
                android:layout_marginRight="@dimen/dimen_25dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:backgroundTint="@color/orange_700"
                android:text="@string/ingresar" />
            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_25dp"
                android:layout_marginRight="@dimen/dimen_25dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/registrarse" />
            <Button
                android:id="@+id/btn_visitante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_25dp"
                android:layout_marginRight="@dimen/dimen_25dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:backgroundTint="@color/cyan_800"
                android:text="@string/visitante" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>