<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp"
    android:background="#F5F5F5"
    android:backgroundTint="#F5F5F5"
    tools:context=".activity.ListadoMascotaActivity">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/buscar"
        android:backgroundTint="@color/white"
        android:background="@color/white"/>

    <Button
        android:id="@+id/btn_cerrar_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/cerrar_session"/>

    <Button
        android:id="@+id/btn_agregar_mascota_v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/agregar_mascota_v1"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_listado_mascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"/>
</LinearLayout>